Overlay add style

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Label.razor
@@ -58,7 +58,7 @@
     {
         <SEmptyPlaceholder Height="calc(100vh - 190px);" /> 
     }
-    <MOverlay Class="rounded-4" Value="_showProcess" Absolute Color="#fff" Opacity="1.0">
+    <MOverlay Class="rounded-4" Value="_showProcess" Absolute Color="#fff" Opacity="1.0" Style="height:calc(100vh - 190px);">
         <MProgressCircular Width="4" Indeterminate Size="48" Color="primary"></MProgressCircular>
     </MOverlay>
 </MRow>
