fix: fix #466 in clone modal

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/CloneModal.razor
@@ -151,7 +151,7 @@
                     </MExpansionPanels>
                     @if (IsNeedRebase)
                     {
-                        <div style="width: calc(100% - 48px); position: absolute; bottom: 0; right: 24px">
+                        <div class="full-width" style="padding: 0 228px; position: absolute; bottom: 0; right: 24px">
                             <MAlert Prominent
                             Type="AlertTypes.Warning">
                             @T("ConfigurationObjectNameConflicts")
