--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/ConfigItems.razor
@@ -116,5 +116,8 @@
             </MList>
         </ChildContent>
     </MMenu>
-    <span class="mr-6 regular3--text btn">|</span>
+    @if (!Disabled)
+    {
+        <span class="mr-6 regular3--text btn">|</span>
+    }
 </div>
