fix: fix #464 in clone moal

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Modal/RollbackModal.razor
@@ -48,7 +48,7 @@
                     <ItemColContent>
                         @switch (@context.Header.Text)
                         {
-                            case "状态":
+                            case "State":
                                 if (context.Item.IsAdded)
                                 {
                                     <MIcon Class="mr-1" Color="#7681AB" Style="margin-bottom:2px;" Size="16">mdi-plus</MIcon>
