feat: config object table height adaptive

--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Rcl/Pages/Config.razor
@@ -180,8 +180,8 @@
                                         <MExpansionPanelContent>
                                             @if (configObject.RelationConfigObjectId != 0)
                                             {
-                                                <MCard Style="border:1px solid #E2E7F4;" Class="py-3 mt-4 rounded-5">
-                                                    <MDataTable FixedHeader Style="max-height: 312px;" Height="312" Headers="Headers"
+                                                <MCard Style="border:1px solid #E2E7F4; overflow: auto;" Class="py-3 mt-4 rounded-5">
+                                                    <MDataTable FixedHeader Style="max-height: 312px; overflow: auto;" Headers="Headers"
                                                         SortDesc="true"
                                                         SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
                                                         TItem="ConfigObjectPropertyModel"
@@ -237,8 +237,8 @@
                                                     Dense
                                                     Tabs="@(new List<string>{ T("Table"), T("Text") })">
                                                     <SElevationTabItem>
-                                                        <MCard Style="border:1px solid #E2E7F4; padding: 1px;" Class="py-3 mt-4 rounded-5">
-                                                            <MDataTable FixedHeader Style="max-height: 312px;" Height="312" Headers="Headers"
+                                                        <MCard Style="border:1px solid #E2E7F4; padding: 1px; overflow: auto;" Class="py-3 mt-4 rounded-5">
+                                                            <MDataTable FixedHeader Style="max-height: 312px;" Headers="Headers"
                                                                 SortDesc="true"
                                                                 SortBy="new List<string>{ nameof(ConfigObjectPropertyModel.IsPublished) }"
                                                                 TItem="ConfigObjectPropertyModel"
